Adding help button
Former-commit-id: 10bfd4e0467784f3fb8cf2e3088966ea9cc102c1